@@ -50,6 +50,8 @@ public class GUIMetaElement extends ActivatableGUIElement implements GUIScrollab
 
     private final String format;
 
+    private final String tooltip;
+
     /**
      * The default scroll index.
      */
@@ -66,22 +68,25 @@ public class GUIMetaElement extends ActivatableGUIElement implements GUIScrollab
         public void entryAdded()
         {
             render();
+            updateTooltip();
         }
 
         /** {@inheritDoc} */
         public void entryRemoved()
         {
             render();
+            updateTooltip();
         }
 
         /** {@inheritDoc} */
         public void entryChanged()
         {
             render();
+            updateTooltip();
         }
     };
 
-    public GUIMetaElement(final JXCWindow jxcWindow, final String name, final int x, final int y, final int w, final int h, final BufferedImage tcpImage, final Font font, final GUIText text, final AbstractLabel comment, final int index, final String format)
+    public GUIMetaElement(final JXCWindow jxcWindow, final String name, final int x, final int y, final int w, final int h, final BufferedImage tcpImage, final Font font, final GUIText text, final AbstractLabel comment, final int index, final String format, final String tooltip)
     {
         super(jxcWindow, name, x, y, w, h);
         this.tcpImage = tcpImage;
@@ -91,9 +96,11 @@ public class GUIMetaElement extends ActivatableGUIElement implements GUIScrollab
         this.defaultIndex = index;
         this.index = index;
         this.format = format;
+        this.tooltip = tooltip;
         createBuffer();
         jxcWindow.getMetaserver().addMetaserverEntryListener(index, metaserverEntryListener);
         render();
+        updateTooltip();
     }
 
     /** {@inheritDoc} */
@@ -223,5 +230,14 @@ public class GUIMetaElement extends ActivatableGUIElement implements GUIScrollab
     public int getIndex()
     {
         return index;
+    }
+
+    /**
+     * Updates the tooltip text.
+     */
+    private void updateTooltip()
+    {
+        final MetaserverEntry metaEntry = getJXCWindow().getMetaserver().getEntry(index);
+        setTooltipText(metaEntry == null ? null : metaEntry.format(tooltip));
     }
 }
