@@ -1,5 +1,7 @@
 2008-03-22  Andreas Kirschbaum
 
+	* Add tooltips to server entries in server selection dialog.
+
 	* Remember last used server name.
 
 	* Suppress spurious "low food" warning while logging in.
